# django-serfa

./: pyproject.toml
django_serfa/: apps.py  runner.py  validations.py
tests/: test_service_containers.py  test_settings.py  test_validate_settings.py
